--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -8,6 +8,18 @@
 <div class="index header">
     <h1 class="">Project Request Form</h1>
 </div>
+<div id="request-bullet-points" class="mt-2 mb-4">
+    <ul class="my-3">
+        <li class="text-muted ">
+            Making a request is super simple. Only complete the form
+            below.
+        </li>
+        <li class="text-muted">
+            Your reques will be put in a queue and delivered in order of
+            arrival.
+        </li>
+    </ul>
+</div>
 <div class="row">
     <div class="col">
         <div>
@@ -23,21 +35,6 @@
                     </ul>
                 </div>
                 <div class="card-body">
-                    <ul>
-                        <li class="text-muted">
-                            Making a request is super simple. Only complete the form
-                            below.
-                        </li>
-                        <li class="text-muted py-1">
-                            Your reques will be put in a queue and delivered in order of
-                            arrival.
-                        </li>
-                        <li class="text-muted">
-                            You can also maye your request by writing directly to
-                            request@thefutures.io
-                        </li>
-                    </ul>
-                    <hr>
                     <div>
                         <h5 class="mb-0 font-weight-bold card-title">1. Tell us about your design</h5>
                         <small class="mt-0 text-muted">Be as detailed as possible.</small>
