--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -21,7 +21,7 @@
     </ul>
 </div>
 <div class="row">
-    <div class="col">
+    <div class="col-7">
         <div>
             <div class="project-request card">
                 <div class="card-header">
@@ -54,9 +54,12 @@
                                 We love lists, please list the specific things you wish to see on your piece.
                                 Our creatives are always more efficient when you are able to itemise your requests.
                             </small>
-                            <div class="md-form mb-4 pink-textarea active-pink-textarea">
-                                <textarea id="form3" class="md-textarea form-control" rows="2"></textarea>
-                                <label for="form3">Please list the specific things you wish to see on your piece</label>
+                            <div class="md-form">
+                                <input type="text" id="form1" class="form-control" required>
+                                <label for="form1">1. </label>
+                            </div>
+                            <div class="text-right font-weight-bold" id="request-addmore-button">
+                                + ADD MORE
                             </div>
                         </div>
                         <hr>
@@ -87,18 +90,6 @@
                                     them in this box.</label>
                             </div>
                         </div>
-                        <hr>
-                        <div>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
-                                <label class="custom-control-label" for="defaultUnchecked">I confirm I have providad all
-                                    final copy and/or content for this request. I have read and accept the <a
-                                        href="#">Terms of
-                                        Service</a></label>
-                            </div>
-                        </div>
-                        <hr>
-                        <button class="mx-0 float-right btn btn-futures">Send Request</button>
                     </form>
 
 
@@ -108,7 +99,7 @@
     </div>
     <div class="col">
         <div class="card">
-            <div class="card-body">
+            <div class="card-body py-4">
                 <h5 class="mb-0 font-weight-bold card-title">2. Upload Assets</h5>
                 <small class="mt-0 text-muted">Upload anything you may want in your design (photos, fonts,
                     logos, word docs, images, etc).</small>
@@ -128,7 +119,7 @@
         </div>
         <div>
             <div class="card mt-4">
-                <div class="card-body">
+                <div class="card-body py-4">
                     <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
                     <small class="mt-0 text-muted">Pick the types of files you want to receive.</small>
                     <div>
@@ -153,6 +144,18 @@
                 </div>
             </div>
         </div>
+        <hr>
+        <div>
+            <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                <label class="custom-control-label" for="defaultUnchecked">I confirm I have providad all
+                    final copy and/or content for this request. I have read and accept the <a href="#">Terms
+                        of
+                        Service</a></label>
+            </div>
+        </div>
+        <hr>
+        <button class="mx-0 float-right btn btn-futures">Send Request</button>
     </div>
 </div>
 {% endblock %}
@@ -177,12 +180,12 @@
         });
     }
 </script>
-<script>
+{# <script>
     $('textarea').each(function () {
         this.setAttribute('style', 'height:' + (this.scrollHeight / 1.3) + 'px;overflow-y:hidden;');
     }).on('input', function () {
         this.style.height = 'auto';
         this.style.height = (this.scrollHeight / 1.3) + 'px';
     });
-</script>
+</script> #}
 {% endblock %}
