--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -100,11 +100,12 @@
     <div class="col">
         <div class="card">
             <div class="card-body py-4">
-                <h5 class="mb-0 font-weight-bold card-title">2. Upload Assets</h5>
-                <small class="mt-0 text-muted">Upload anything you may want in your design (photos, fonts,
-                    logos, word docs, images, etc).</small>
-
-                <div class=" my-2">
+                <div class="">
+                    <h5 class="mb-1 font-weight-bold card-title">2. Upload Assets</h5>
+                    <small class="mt-1 text-muted">Upload anything you may want in your design (photos, fonts,
+                        logos, word docs, images, etc).</small>
+                </div>
+                <div class="my-3">
                     <div class="custom-file">
                         <input type="file" multiple class="custom-file-input" id="inputGroupFile01"
                             aria-describedby="inputGroupFileAddon01">
@@ -122,7 +123,7 @@
                 <div class="card-body py-4">
                     <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
                     <small class="mt-0 text-muted">Pick the types of files you want to receive.</small>
-                    <div>
+                    <div class="my-2">
                         <!-- Default inline 1-->
                         <div class="custom-control custom-checkbox custom-control-inline">
                             <input type="checkbox" class="custom-control-input" id="defaultInline1">
@@ -149,9 +150,9 @@
             <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
                 <label class="custom-control-label" for="defaultUnchecked">I confirm I have providad all
-                    final copy and/or content for this request. I have read and accept the <a href="#">Terms
-                        of
-                        Service</a></label>
+                    final copy and/or content for this request. I have read and accept the
+                    <a href="#"> Terms of Service</a>
+                </label>
             </div>
         </div>
         <hr>
