--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -20,21 +20,22 @@
         </li>
     </ul>
 </div>
-<div class="row">
-    <div class="col-7">
-        <div>
-            <div class="project-request card">
-                <div class="card-header">
-                    <ul class="nav nav-tabs card-header-tabs">
-                        <li class="nav-item">
-                            <a id="graphic" class="nav-link active">Graphic Design</a>
-                        </li>
-                        <li class="nav-item">
-                            <a id="video" class="nav-link">Video Editing</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="card-body">
+
+<div>
+    <div class="project-request card">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a id="graphic" class="nav-link active">Graphic Design</a>
+                </li>
+                <li class="nav-item">
+                    <a id="video" class="nav-link">Video Editing</a>
+                </li>
+            </ul>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-7 pr-5">
                     <div>
                         <h5 class="mb-0 font-weight-bold card-title">1. Tell us about your design</h5>
                         <small class="mt-0 text-muted">Be as detailed as possible.</small>
@@ -94,69 +95,68 @@
 
 
                 </div>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card">
-            <div class="card-body py-4">
-                <div class="">
-                    <h5 class="mb-1 font-weight-bold card-title">2. Upload Assets</h5>
-                    <small class="mt-1 text-muted">Upload anything you may want in your design (photos, fonts,
-                        logos, word docs, images, etc).</small>
-                </div>
-                <div class="my-3">
-                    <div class="custom-file">
-                        <input type="file" multiple class="custom-file-input" id="inputGroupFile01"
-                            aria-describedby="inputGroupFileAddon01">
-                        <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                    </div>
-                </div>
-                <div>
-                    <small class="">Please make sure that your file upload does not exceed 10MB in
-                        Total</small>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div class="card mt-4">
-                <div class="card-body py-4">
-                    <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
-                    <small class="mt-0 text-muted">Pick the types of files you want to receive.</small>
-                    <div class="my-2">
-                        <!-- Default inline 1-->
-                        <div class="custom-control custom-checkbox custom-control-inline">
-                            <input type="checkbox" class="custom-control-input" id="defaultInline1">
-                            <label class="custom-control-label" for="defaultInline1">PNG</label>
-                        </div>
+                <div class="col">
 
-                        <!-- Default inline 2-->
-                        <div class="custom-control custom-checkbox custom-control-inline">
-                            <input type="checkbox" class="custom-control-input" id="defaultInline2">
-                            <label class="custom-control-label" for="defaultInline2">JPG</label>
+                    <div class="card-body py-4">
+                        <div class="">
+                            <h5 class="mb-1 font-weight-bold card-title">2. Upload Assets</h5>
+                            <small class="mt-1 text-muted">Upload anything you may want in your design (photos,
+                                fonts,
+                                logos, word docs, images, etc).</small>
                         </div>
-
-                        <!-- Default inline 3-->
-                        <div class="custom-control custom-checkbox custom-control-inline">
-                            <input type="checkbox" class="custom-control-input" id="defaultInline3">
-                            <label class="custom-control-label" for="defaultInline3">PDF</label>
+                        <div class="my-3">
+                            <div class="custom-file">
+                                <input type="file" multiple class="custom-file-input" id="inputGroupFile01"
+                                    aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                            </div>
+                        </div>
+                        <div>
+                            <small class="">Please make sure that your file upload does not exceed 10MB in
+                                Total</small>
                         </div>
                     </div>
+                    <div class="p-2">
+                        <div class="mt-4">
+                            <div class="card-body py-4">
+                                <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
+                                <small class="mt-0 text-muted">Pick the types of files you want to receive.</small>
+                                <div class="my-2">
+                                    <!-- Default inline 1-->
+                                    <div class="custom-control custom-checkbox custom-control-inline">
+                                        <input type="checkbox" class="custom-control-input" id="defaultInline1">
+                                        <label class="custom-control-label" for="defaultInline1">PNG</label>
+                                    </div>
+
+                                    <!-- Default inline 2-->
+                                    <div class="custom-control custom-checkbox custom-control-inline">
+                                        <input type="checkbox" class="custom-control-input" id="defaultInline2">
+                                        <label class="custom-control-label" for="defaultInline2">JPG</label>
+                                    </div>
+
+                                    <!-- Default inline 3-->
+                                    <div class="custom-control custom-checkbox custom-control-inline">
+                                        <input type="checkbox" class="custom-control-input" id="defaultInline3">
+                                        <label class="custom-control-label" for="defaultInline3">PDF</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                            <label class="custom-control-label" for="defaultUnchecked">I confirm I have providad all
+                                final copy and/or content for this request. I have read and accept the
+                                <a href="#"> Terms of Service</a>
+                            </label>
+                        </div>
+                        <button class="mx-0 btn btn-futures">Send Request</button>
+                    </div>
                 </div>
             </div>
         </div>
-        <hr>
-        <div>
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
-                <label class="custom-control-label" for="defaultUnchecked">I confirm I have providad all
-                    final copy and/or content for this request. I have read and accept the
-                    <a href="#"> Terms of Service</a>
-                </label>
-            </div>
-        </div>
-        <hr>
-        <button class="mx-0 float-right btn btn-futures">Send Request</button>
+
     </div>
 </div>
 {% endblock %}
