--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -151,7 +151,9 @@
                                 <a href="#"> Terms of Service</a>
                             </label>
                         </div>
-                        <button class="mx-0 btn btn-futures">Send Request</button>
+                        <div class="mt-4">
+                            <button class="mx-0 btn btn-futures">Send Request</button>
+                        </div>
                     </div>
                 </div>
             </div>
