--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -116,7 +116,7 @@
                                 Total</small>
                         </div>
                     </div>
-                    <div class="p-2">
+                    <div class="">
                         <div class="mt-4">
                             <div class="card-body py-4">
                                 <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
