--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -122,7 +122,10 @@
                                         <div class="file-upload-content">
                                             <img class="file-upload-image" src="#" alt="your image" />
                                             <div class="image-title-wrap">
-
+                                                <span class="image-title">Uploaded Image</span>
+                                                <button type="button" onclick="removeUpload()"
+                                                    class="remove-image">Remove
+                                                    <span class="image-title">Uploaded Image</span></button>
                                             </div>
                                         </div>
                                         <div class="mt-2 text-center">
