--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -33,7 +33,7 @@
                 </li>
             </ul>
         </div>
-        <div class="card-body">
+        <div class="mt-4">
             <div class="row">
                 <div class="col-7 pr-4">
                     <div>
