--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -26,10 +26,10 @@
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <a id="graphic" class="nav-link active">Graphic Design</a>
+                    <a id="graphic" class="nav-link active m-0">Graphic Design</a>
                 </li>
                 <li class="nav-item ">
-                    <a id="video" class="nav-link">Video Editing (By invite Only)</a>
+                    <a id="video" class="nav-link m-0">Video Editing (By invite Only)</a>
                 </li>
             </ul>
         </div>
