--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -487,19 +487,17 @@ tbody td {
 }
 
 .drag-text p {
-    font-size: 22px;
+    font-size: 16px;
     font-weight: 500px;
 }
 
 .drag-text {
     width: 100%;
-    margin: 0 auto;
-    padding: 120px 0;
+    margin: 0;
+    padding: 130px 0;
 }
 
 .file-upload-image {
-    max-height: 200px;
-    max-width: 200px;
     margin: auto;
     padding: 20px;
 }
