--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -23,7 +23,7 @@
 
 <div>
     <div class="project-request">
-        <div class="card-header">
+        <div class="card-header" style="padding-left: 11px;">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
                     <a id="graphic" class="nav-link active m-0">Graphic Design</a>
@@ -145,12 +145,12 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="mt-2 text-center">
+                                        {# <div class="mt-2 text-center">
                                             {# <button class="btn btn-circle btn-xl bg-futures text-white" type="button"
                                                 onclick="$('.file-upload-input').trigger( 'click' )">
                                                 <i class="fas fa-plus"></i>
-                                            </button> #}
-                                        </div>
+                                            </button>
+                                        </div> #}
                                     </div>
                                 </div>
                             </div>
