--- a/public/styles/request.css
+++ b/public/styles/request.css
@@ -16,3 +16,8 @@
     padding-top: 12px;
     padding-bottom: 8px;
 }
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    border-color: #dee2e6;
+}
