--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -23,12 +23,12 @@
 
 <div>
     <div class="project-request">
-        <div class="card-header" style="padding-left: 11px;">
+        <div class="card-header" style="">
             <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
+                <li class="nav-item mb-2">
                     <a id="graphic" class="nav-link active m-0">Graphic Design</a>
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item mb-2">
                     <a id="video" class="nav-link m-0">Video Editing (By invite Only)</a>
                 </li>
             </ul>
