--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -22,13 +22,13 @@
 </div>
 
 <div>
-    <div class="project-request">
-        <div class="card-header" style="">
+    <div class="project-request" style="">
+        <div class="card-header" style="padding-left: 11px;">
             <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item mb-2">
+                <li class="nav-item">
                     <a id="graphic" class="nav-link active m-0">Graphic Design</a>
                 </li>
-                <li class="nav-item mb-2">
+                <li class="nav-item ">
                     <a id="video" class="nav-link m-0">Video Editing (By invite Only)</a>
                 </li>
             </ul>
@@ -163,8 +163,10 @@
                                 Total</small>
                         </div>
                     </div>
+
                     <div class="">
                         <div class="mt-4">
+                            <hr>
                             <div class="py-4">
                                 <h5 class="mb-0 font-weight-bold card-title">3. Files Needed</h5>
                                 <small class="mt-0 text-muted">Pick the types of files you want to receive.</small>
@@ -190,6 +192,7 @@
                             </div>
                         </div>
                     </div>
+                    <hr>
                     <div class="">
                         <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
@@ -206,7 +209,10 @@
             </div>
         </div>
 
+
+        <hr class="mt-4">
     </div>
+
 </div>
 {% endblock %}
 
