--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -201,16 +201,18 @@
                                 <a href="#"> Terms of Service</a>
                             </label>
                         </div>
-                        <div class="mt-4 text-right">
+                        {# <div class="mt-4 text-right">
                             <button class="mx-0 btn btn-futures">Submit Request</button>
-                        </div>
+                        </div> #}
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <hr class="mt-4">
+        <div class="card-footer">
+            <div class="m-0 text-right">
+                <button class="mx-0 btn btn-futures">Submit Request</button>
+            </div>
+        </div>
     </div>
 
 </div>
