--- a/public/styles/request.css
+++ b/public/styles/request.css
@@ -16,3 +16,23 @@
     padding-top: 12px;
     padding-bottom: 8px;
 }
+
+.btn-futures-request {
+    color: white;
+    background-color: var(--futures-color) !important;
+    border-radius: 0.25rem;
+    font-weight: 400;
+    padding-top: 12px;
+    padding-bottom: 8px;
+    margin-right: 1.5rem;
+    font-size: 14px;
+}
+
+.btn-futures-request:hover {
+    color: white;
+}
+
+.project-request .card-footer {
+    padding:
+        .5rem 1.25rem;
+}
