--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -8,21 +8,23 @@
 <div class="index header">
     <h1 class="">Project Request Form</h1>
 </div>
-<div id="request-bullet-points" class="mt-2 mb-4">
+{# <div id="request-bullet-points" class="mt-2 mb-4">
     <ul class="my-3">
         <li class="text-muted ">
-            Making a request is super simple. Only complete the form
-            below.
+
         </li>
         <li class="text-muted">
             Your reques will be put in a queue and delivered in order of
             arrival.
         </li>
     </ul>
-</div>
+</div> #}
 
 <div>
-    <div class="project-request" style="">
+    <div class="project-request" class="mt-5">
+        <p>Your request will be put in a queue and delivered in order of
+            arrival | Making a request is super simple, only complete the form
+            below.</p>
         <div class="card-header" style="padding-left: 11px;">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
