--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -22,7 +22,7 @@
 
 <div>
     <div class="project-request" class="mt-5">
-        <p>Your request will be put in a queue and delivered in order of
+        <p class="mb-1">Your request will be put in a queue and delivered in order of
             arrival | Making a request is super simple, only complete the form
             below.</p>
         <div class="card-header" style="padding-left: 11px;">
