--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -22,9 +22,9 @@
 
 <div>
     <div class="project-request" class="mt-5">
-        <p class="mb-1">Your request will be put in a queue and delivered in order of
-            arrival | Making a request is super simple, only complete the form
-            below.</p>
+        <p class="mb-1">Making a request is super simple, only complete the form
+            below. Your request will be put in a queue and delivered in order of
+            arrival </p>
         <div class="card-header" style="padding-left: 11px;">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
