--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -213,7 +213,7 @@
         </div>
         <div class="card-footer">
             <div class="m-0 text-right">
-                <button class="m-0 btn btn-futures-request">Submit Request</button>
+                <button class="m-0 btn btn-futures">Submit Request</button>
             </div>
         </div>
     </div>
