--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -86,8 +86,8 @@ thead tr th {
     background-color: var(--futures-color) !important;
     border-radius: 0.25rem;
     font-weight: 700;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: .875rem;
+    padding-bottom: .875rem;
     letter-spacing: 0.1rem;
     margin-right: 1.5rem;
 }
