--- a/resources/views/order-history.twig
+++ b/resources/views/order-history.twig
@@ -1,17 +1,8 @@
 {% extends 'layout2.twig' %}
 {% block content %}
 <!-- Main content Header-->
-<div class="header">
-  <h1 class="main-title">Order History</h1>
-  <button class="btn btn-futures dropdown-toggle mr-4" type="button" data-toggle="dropdown" aria-haspopup="true"
-    aria-expanded="false">NEW ORDER</button>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Separated link</a>
-  </div>
+<div class="header  mb-4">
+  <h1 class="main-title">Project History</h1>
 </div>
 <!--/ Main content Header-->
 <!-- Main content Data Display-->
@@ -86,9 +77,10 @@
   </table>
 </div>
 
+{# 
 <div class="float-right">
   <a class="btn red-button">Export as .CSV</a>
-</div>
+</div> #}
 
 <!--/ Main content Data Display-->
 {% endblock %}
