--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -182,7 +182,7 @@
             <div class="sidebar-link py-2">
               <div class="">
                 <a class="text-link" class="text-link" href="#">
-                  Shuttle (Soon)
+                  Knowledge Base (Soon)
                 </a>
               </div>
             </div>
