--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -7,7 +7,7 @@
 <!-- Main content Header-->
 <div class="row">
     <div class="col">
-        <div class="index header">
+        <div class="index header mb-4">
             <div>
                 <h1 class="">Project Progress</h1>
             </div>
