--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -61,7 +61,7 @@
                                 <input type="text" id="form1" class="form-control" required>
                                 <label for="form1">1. </label>
                             </div>
-                            <div class="text-right font-weight-bold" id="request-addmore-button">
+                            <div class="text-right futures-color-purple font-weight-bold" id="request-addmore-button">
                                 + ADD MORE
                             </div>
                         </div>
