--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -97,32 +97,26 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Enterprise</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><i class="far fa-bell"></i></a>
+          <a class="nav-link" href="#">Support</a>
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
           <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle ">Hi William</a>
           <ul class="dropdown-menu p-0 mt-2 rounded-0  border-0 z-depth-1">
             <li class="dropdown-item p-0 pt-2">
-              <a class="" href="/thefutures/dashboard/">My Files</a>
+              <a class="" href="/thefutures/dashboard/">Place a Request</a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="/thefutures/dashboard/order-history" class="">Order History</a>
+              <a href="/thefutures/dashboard/order-history" class="">Project Progress</a>
+            </li>
+            <li class="dropdown-item p-0">
+              <a href="#" class="">Project History</a>
             </li>
             <li class="dropdown-item p-0">
               <a href="#" class="">Manage Team</a>
             </li>
             <li class=" dropdown-item p-0">
-              <a href="#" class="">Settings</a>
+              <a href="#" class="">Account Settings</a>
             </li>
           </ul>
         </li>
