--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -97,6 +97,9 @@
           </ul>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Support</a>
         </li>
         <!-- Dropdown -->
