--- a/resources/views/order-history.twig
+++ b/resources/views/order-history.twig
@@ -7,7 +7,7 @@
 <!--/ Main content Header-->
 <!-- Main content Data Display-->
 <div class="data table-responsive text-nowrap">
-  <table id="" cellspacing="0" class="table tickets-table table-hover">
+  <table id="" cellspacing="0" class="table history-table table-hover">
     <thead>
       <tr>
         <th scope="col">#ID</th>
