--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -14,7 +14,7 @@
         </div>
         <!--/ Main content Header-->
         <!-- Main content Data Display-->
-        <table id="" cellspacing="0" class="table tickets-table table-hover">
+        <table id="" cellspacing="0" class="table progress-table table-hover">
             <thead>
                 <tr>
                     <th scope="col">#ID</th>
