Mejoras en los estilos

--- a/resources/views/manage-team.twig
+++ b/resources/views/manage-team.twig
@@ -32,7 +32,61 @@
       <button class="mt-4 ml-0 btn btn-futures">Send Invites</a>
     </form>
   </div>
-
+  <hr>
+  <div class="mt-5">
+    <h2 class="mb-3">Active</h2>
+    <div class="data table-responsive text-nowrap">
+      <table id="" cellspacing="0" class="table history-table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Email</th>
+            <th scope="col">Role</th>
+            <th scope="col">Joined On</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">
+              William
+            </th>
+            <td>william@thefutures.io</td>
+            <td>Manager</td>
+            <td>21/06/2019</td>
+            <td><a href=""><i class="fas fa-link"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">
+              Angel
+            </th>
+            <td>angel@thefutures.io</td>
+            <td>User</td>
+            <td>22/06/2019</td>
+            <td><a href=""><i class="fas fa-link"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">
+              William
+            </th>
+            <td>william@thefutures.io</td>
+            <td>Manager</td>
+            <td>21/06/2019</td>
+            <td><a href=""><i class="fas fa-link"></i></a></td>
+          </tr>
+          <tr>
+            <th scope="row">
+              Angel
+            </th>
+            <td>angel@thefutures.io</td>
+            <td>User</td>
+            <td>22/06/2019</td>
+            <td><a href=""><i class="fas fa-link"></i></a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 <!--/ Main content Data Display-->
 {% endblock %}
