--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -158,7 +158,8 @@ h1 {
 }
 
 h2 {
-    font-size: 22px !important;
+    font-size: 20px !important;
+    font-weight: 600 !important;
 }
 
 tbody {
