--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -205,7 +205,7 @@
       </nav>
       <!-- sidebar-wrapper  -->
       <main class="page-content">
-        <div class="container-fluid pt-0 pl-5">
+        <div class="container-fluid pt-0">
           <div class="main-content">
             {% block content %}{% endblock %}
           </div>
